airline-checkin-app/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: SEED
              value: "42"
            - name: redis_service
              value: http://redis-service:5000
          image: backend
          name: backend
          ports:
            - containerPort: 1919
              protocol: TCP
      restartPolicy: Always
