airline-checkin-app/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: redis
    spec:
      containers:
        - args:
            - redis-server
            - --maxmemory
            - 512mb
            - --maxmemory-policy
            - allkeys-lru
          image: redis:7
          name: redis
          ports:
            - containerPort: 6379
              protocol: TCP
      restartPolicy: Always
