airline-checkin-app/redis-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: redis-service
  name: redis-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: redis-service
    spec:
      containers:
        - env:
            - name: REDIS_URL
              value: redis://redis:6379/0
          image: gcr.io/cs144proj/redis-service:latest
          name: redis-service
          ports:
            - containerPort: 5000
              protocol: TCP
      restartPolicy: Always
