airline-checkin-app/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  ports:
    - name: "1919"
      port: 1919
      targetPort: 1919
  selector:
    io.kompose.service: backend
