airline-checkin-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airline-app-ingress
  annotations:
    # Use the static IP address you reserved
    kubernetes.io/ingress.global-static-ip-name: "airline-app-ip"
    # Reference the managed certificate you just defined
    networking.gke.io/managed-certificates: "airline-app-certificate"
    # This annotation automatically handles HTTP to HTTPS redirection
    kubernetes.io/ingress.allow-http: "true"
spec:
  # This 'rules' section replaces the 'defaultBackend'
  rules:
  - http:
      paths:
      - path: /api/* # If the URL path starts with /api...
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend  # ...route the request to your backend service
            port:
              number: 1919
      - path: /* # For all other URL paths...
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend # ...route the request to your frontend service
            port:
              number: 80
